.aws/pondo-bot-stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to deploy the permissionless Pondo Bot.
Parameters:
  PondoBotAMIId:
    Description: Amazon Machine Image ID
    Type: String
    Default: ami-05c3dc660cb6907f0
  PondoBotRepository:
    Description: Name of the Docker repository in private ECR
    Type: String
    Default: 896271372236.dkr.ecr.us-east-2.amazonaws.com/pondo-bot
  LatestTag:
    Description: The latest image tag to be used for the Docker image
    Type: String
    Default: tag
  BranchName:
    Description: The branch name of the GitHub repository
    Type: String
    Default: main

Resources:
  PondoInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - PondoEC2Role
  PondoBotInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 'c6a.large'
      IamInstanceProfile: !Ref PondoInstanceProfile
      ImageId: !Ref PondoBotAMIId
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash

          # Install and start the CloudWatch Logs agent
          sudo yum update -y
          sudo yum install -y awslogs
          sudo systemctl start awslogsd
          sudo systemctl enable awslogsd.service

          # Install and start docker
          sudo yum update -y
          sudo yum install -y docker
          sudo service docker start
          aws ecr get-login-password --region ${AWS::Region} | sudo docker login --username AWS --password-stdin ${PondoBotRepository}

          sudo docker pull ${PondoBotRepository}:${LatestTag}
          docker run -d --restart always -p 80:80 -p 443:443 ${PondoBotRepository}:${LatestTag}
      Tags:
        - Key: Name
          Value: !Join ['', ['PondoBot-', !Ref 'BranchName']]
        - Key: AccessControl
          Value: PondoBot

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable SSH and HTTP/HTTPS access'
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: 'tcp'
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: 'tcp'
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'

Outputs:
  InstanceId:
    Description: 'InstanceId of the newly created Pondo Bot EC2 instance'
    Value: !Ref PondoBotInstance
  PublicIP:
    Description: 'Public IP address of the newly created Pondo Bot EC2 instance'
    Value: !GetAtt PondoBotInstance.PublicIp
